src/objects/Key_Risk_Metric_Measure__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Formula__c</fullName>
        <formula>IF(ISBLANK(Actual__c),&apos;&apos;,CASE(TEXT(Key_Risk_Metric__r.Measured_Unit__c),&apos;Ratio%&apos;, TEXT(Actual__c)+&apos;%&apos;,&apos;AED Dollars&apos;, &apos;$&apos; +TEXT(Actual__c),&apos;USD Dollars&apos;, &apos;$&apos; + TEXT(Actual__c),&apos;Number&apos;,TEXT(Actual__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FWD_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FWD Risk</label>
        <referenceTo>Risk_Assessment__c</referenceTo>
        <relationshipLabel>Key Risk Metric Measures</relationshipLabel>
        <relationshipName>Key_Risk_Metric_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Risk_Metric__c</fullName>
        <label>Key Risk Metric</label>
        <referenceTo>Key_Risk_Metric__c</referenceTo>
        <relationshipLabel>Key Risk Metric Measures</relationshipLabel>
        <relationshipName>Key_Risk_Metric_Measures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lower_Limit_Formula__c</fullName>
        <formula>IF(ISBLANK(Lower_Limit__c),&apos;&apos;,CASE(TEXT(Key_Risk_Metric__r.Measured_Unit__c), &apos;Ratio%&apos;, TEXT(Lower_Limit__c)+&apos;%&apos;, &apos;AED Dollars&apos;, &apos;$&apos; + TEXT(Lower_Limit__c), &apos;USD Dollars&apos;, &apos;$&apos; + TEXT(Lower_Limit__c), &apos;Number&apos;,TEXT(Lower_Limit__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lower Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_in_the_threshold__c</fullName>
        <formula>IF(OR( Lower_Limit__c &gt; Actual__c,  Upper_Limit__c &lt;  Actual__c ), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not in the threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Name__c</fullName>
        <formula>UGI_Risk__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UGI_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UGI Risk</label>
        <referenceTo>UGI_Risk__c</referenceTo>
        <relationshipLabel>Key Risk Metric Measures</relationshipLabel>
        <relationshipName>Key_Risk_Metric_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upper_Limit_Formula__c</fullName>
        <formula>IF( ISBLANK(Upper_Limit__c),&apos;&apos;,CASE(TEXT(Key_Risk_Metric__r.Measured_Unit__c), &apos;Ratio%&apos;, TEXT(Upper_Limit__c)+&apos;%&apos;, &apos;AED Dollars&apos;, &apos;$&apos; + TEXT(Upper_Limit__c), &apos;USD Dollars&apos;, &apos;$&apos; + TEXT(Upper_Limit__c), &apos;Number&apos;,TEXT(Upper_Limit__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upper Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Formula__c</fullName>
        <formula>IF(ISBLANK(YTD__c),&apos;&apos;,CASE(TEXT(Key_Risk_Metric__r.Measured_Unit__c), &apos;Ratio%&apos;, TEXT(YTD__c)+&apos;%&apos;, &apos;AED Dollars&apos;, &apos;$&apos; + TEXT(YTD__c), &apos;USD Dollars&apos;, &apos;$&apos; + TEXT( YTD__c ), &apos;Number&apos;,TEXT(YTD__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_history_record__c</fullName>
        <formula>if(isnumber(  Actual_Formula__c  ), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of history record</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Key Risk Metric Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Key_Risk_Metric__c</columns>
        <columns>UGI_Risk__c</columns>
        <columns>Risk_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Risk Metric Measures</pluralLabel>
    <recordTypes>
        <fullName>FWD</fullName>
        <active>true</active>
        <label>FWD</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>UGI</fullName>
        <active>true</active>
        <label>UGI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>